--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss": "^8.5.3",
+    "supabase": "^2.15.8",
     "tailwindcss": "^4.0.9",
     "typescript": "^5"
   }
